# VideoProcessingApp

VideoProcessingApp/: CMakeLists.txt  README.md
VideoProcessingApp/include/: video_processor.h
VideoProcessingApp/src/: main.cpp  video_processor.cpp
